2005-08-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c, src/pdsh/pcp_server.c : Remove debug code for pdcp 
	  which was accidentally committed.

2005-07-21  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c, src/common/hostlist.h : Update hostlist code
	  to latest version from LSD-Tools project, which fixes many bugs.

	* src/pdsh/mod.c (_dir_ok) : Directory permissions are ok even if 
	  other has write permission if the sticky bit is set.

	* src/pdsh/mod.c (_mod_load_dynamic_modules) : Don't load module
	  files owned by users other than current user and root, or files that
	  have write permissions for other.

	* : tag pdsh-2.5

2005-07-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Add ssh "reaper" thread to collect exit status
	  of all ssh commands and print any nonzero exit codes at end of pdsh run.
	  No longer invoke ssh backgrounded, as this is no longer needed since
	  pdsh now reaps these processes.

	* config/Make-rpm.mk, Makefile.am : Remove unneeded "make rpm" target.

	* doc/pdsh.1.in : Fix up some manpage text.

2005-07-19  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xmalloc.h, src/common/xmalloc.c : Strdup takes const arg.

	* src/modules/mqcmd.c (mqcmd) : Fail gracefully if munge_ctx_create
	  returns NULL.


2005-07-15  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (dsh) : Be sure to handle error conditions on file
	  descriptors when returning from xpoll(). (fixes pdsh hang on OS X
	  as reported by Andrina Kelly <andrina@corefa.com>).

2005-05-31  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/dsh.c (dsh) : Don't call _increase_nofile_limit() until after 
	  mod_rcmd_init().

2005-05-09  Albert Chu <chu11@llnl.gov>

	* : Added genders querying support to -g and -X options.

	* src/modules/genders.c (genders_init): New function.

	* src/modules/genders.c (genders_fini): Call lt_dlclose
	  appropriately.  Fix prototype to match ModExitF type and return 0.
	